[gd_scene format=3 uid="uid://4xw4wuwq8afp"]

[ext_resource type="Script" uid="uid://duuxxpnjwotn1" path="res://scenes/Player/Player.gd" id="1_xhfnw"]
[ext_resource type="Script" uid="uid://den5uw7wjmli7" path="res://scenes/Player/Grapple.gd" id="2_ved6o"]
[ext_resource type="Script" uid="uid://bp02c3h7l45py" path="res://scenes/Player/pause_menu.gd" id="3_bvqhm"]
[ext_resource type="Script" uid="uid://dx7wwvgrxibft" path="res://scenes/Player/camera_3d.gd" id="3_dqp0f"]
[ext_resource type="AudioStream" uid="uid://db1fduk1jivw4" path="res://Assets/Sound/Break.mp3" id="5_xcisb"]
[ext_resource type="Texture2D" uid="uid://c7dbnht8g3mb4" path="res://Assets/Item2D/player_movement_icon.png" id="6_puxyr"]
[ext_resource type="AudioStream" uid="uid://bwdgfyn8p5x53" path="res://Assets/Sound/Grapple.mp3" id="6_socpp"]
[ext_resource type="Script" uid="uid://c4cpivd3r066g" path="res://scenes/Player/timer.gd" id="7_mmokv"]
[ext_resource type="Texture2D" uid="uid://bvvisbkagfi26" path="res://Assets/Item2D/Cursor.png" id="8_mmokv"]
[ext_resource type="Texture2D" uid="uid://bckqhnos6unh8" path="res://Assets/Item2D/CursorOk.png" id="9_mmokv"]
[ext_resource type="Script" uid="uid://wnmjeb7ydwar" path="res://scenes/Player/area_3d.gd" id="10_tl8lu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kpjcp"]
radius = 0.5961914

[sub_resource type="CapsuleMesh" id="CapsuleMesh_kne1u"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ved6o"]
albedo_color = Color(0.19313219, 0.07850107, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ved6o"]
material = SubResource("StandardMaterial3D_ved6o")
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmokv"]
atlas = ExtResource("6_puxyr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqp0f"]
atlas = ExtResource("6_puxyr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl8lu"]
atlas = ExtResource("6_puxyr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_puxyr"]
atlas = ExtResource("6_puxyr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt7jd"]
atlas = ExtResource("6_puxyr")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qt7jd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmokv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqp0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl8lu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puxyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt7jd")
}],
"loop": true,
"name": &"player_movement_icon",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_fxc31"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.50061923, 0.50061965, 0.5006196, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_puxyr"]
gradient = SubResource("Gradient_fxc31")

[sub_resource type="LabelSettings" id="LabelSettings_mmokv"]
font_size = 32

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bvqhm"]
radius = 0.5966797

[node name="Player" type="CharacterBody3D" unique_id=858882668]
script = ExtResource("1_xhfnw")

[node name="Collision" type="CollisionShape3D" parent="." unique_id=1158400688]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_kpjcp")
debug_fill = false

[node name="Shape" type="MeshInstance3D" parent="." unique_id=2065531358]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_kne1u")

[node name="Head" type="Node3D" parent="." unique_id=1756613865]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("2_ved6o")

[node name="Camera3D" type="Camera3D" parent="Head" unique_id=1895542418]
script = ExtResource("3_dqp0f")

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D" unique_id=241536720]
collision_mask = 3

[node name="Marker3D" type="Marker3D" parent="Head/Camera3D" unique_id=631200243]

[node name="GrappleRope" type="MeshInstance3D" parent="Head" unique_id=1925314272]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
mesh = SubResource("BoxMesh_ved6o")

[node name="GrappleSound" type="AudioStreamPlayer3D" parent="Head" unique_id=264215233]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0)
stream = ExtResource("6_socpp")

[node name="CooldownGrapple" type="Timer" parent="Head" unique_id=2146145900]

[node name="HUD" type="Control" parent="." unique_id=551151167]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("7_mmokv")

[node name="Speed" type="Label" parent="HUD" unique_id=94962792]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 435.0
grow_vertical = 0
text = "SPEED : 0 "

[node name="Time" type="Label" parent="HUD" unique_id=65123962]
layout_mode = 0
offset_top = 1.0
offset_right = 260.0
offset_bottom = 24.0
text = "Time : 0.0 s"

[node name="Cursor" type="TextureRect" parent="HUD" unique_id=1061966457]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(16, 16)
texture = ExtResource("8_mmokv")
expand_mode = 1

[node name="CursorOk" type="TextureRect" parent="HUD" unique_id=1356889088]
visible = false
layout_mode = 0
offset_left = 560.0
offset_top = 308.0
offset_right = 624.0
offset_bottom = 372.0
scale = Vector2(0.5000001, 0.5000002)
texture = ExtResource("9_mmokv")

[node name="Sprite2D" type="AnimatedSprite2D" parent="HUD" unique_id=1126050866]
texture_filter = 1
position = Vector2(1120, 616)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_qt7jd")
animation = &"player_movement_icon"
frame_progress = 0.71225935

[node name="PauseMenu" type="Control" parent="." unique_id=109016279]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 384.0
offset_top = 128.0
offset_right = -384.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_bvqhm")

[node name="BackgroundMenu" type="TextureRect" parent="PauseMenu" unique_id=1641626994]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
texture = SubResource("GradientTexture1D_puxyr")
expand_mode = 1

[node name="Button" type="Button" parent="PauseMenu" unique_id=724145172]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -96.0
offset_right = 64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset_ratio = Vector2(0.5, 1)
text = "Back to menu"

[node name="RichTextLabel" type="Label" parent="PauseMenu" unique_id=1626425770]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -102.0
offset_top = 64.0
offset_right = 102.0
offset_bottom = 109.00005
grow_horizontal = 2
text = "pause menu"
label_settings = SubResource("LabelSettings_mmokv")
uppercase = true

[node name="TriggerZone" type="Area3D" parent="." unique_id=340971583]
collision_mask = 2
script = ExtResource("10_tl8lu")

[node name="Collision" type="CollisionShape3D" parent="TriggerZone" unique_id=630651908]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_bvqhm")

[node name="BreakSound" type="AudioStreamPlayer3D" parent="." unique_id=194540480]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
stream = ExtResource("5_xcisb")
parameters/looping = true

[connection signal="timeout" from="Head/CooldownGrapple" to="Head" method="_on_cooldown_grapple_timeout"]
[connection signal="pressed" from="PauseMenu/Button" to="PauseMenu" method="_on_button_pressed"]
[connection signal="area_entered" from="TriggerZone" to="Head" method="_on_area_3d_area_entered"]
